# is-even

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
